fixed some spacing issues related to the navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,20 +11,13 @@
   max-width: 960px;
   height: auto;
   margin: auto;
+  display: flex;
+  justify-content: space-between;
 }
 
-.guess{
+.guess, .page-nav{
   font-size: calc(10px + 14 * (100vw - 320px) / 900);
-  padding-top: calc(10px + 14 * (100vw - 320px) / 1500);
-  padding-left: calc(10px + 14 * (100vw - 320px) / 2165);
-}
-
-.page-nav{
-  float: right;
-  font-size: calc(10px + 14 * (100vw - 320px) / 800);
-  padding-top: calc(10px + 14 * (100vw - 320px) / 1500);
-  padding-left: 0;
-  padding-right: 0;
+  padding: 15px 0;
 }
 
 .headline h1{
@@ -32,21 +25,20 @@
   color: white;
   font-size: calc(10px + 14 * (100vw - 320px) / 800);
   font-weight: 900;
-  padding: calc(10px + 14 * (100vw - 320px) / 2165);
+  padding: 15px;
   display: inline-flex;
-  float: left;
 }
 
-.headline a, .headline p{
+.headline p{
   color: #005757;
   text-decoration: none;
   display: inline-flex;
 }
 
 .score{
-  padding: 0 10px;
-  margin: 0 10px;
-  border-right: 1px solid #e0ebfb;
+  padding: 0 10px 0 0;
+  margin: 0 10px 0 0;
+  border-right: 1px solid #1F7F7F;
 }
 
 @media screen and (max-width: 390px) {
@@ -55,6 +47,7 @@
     text-align: center;
     max-width: 100%;
     padding: 0;
+    display: initial;
   }
 
   .headline p{
@@ -63,7 +56,7 @@
 
   .page-nav{
     font-size: 12px;
-    float: none;
+    padding-top: 0;
   }
 
   .page-nav p{
@@ -73,8 +66,8 @@
   .headline h1{
     font-size: 16px;
     display: block;
-    float: none;
     width: 100%;
+    padding: 15px 0;
   }
 
 }
